// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSourcesAdd /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add Data Source
        </a>
      </li>
    </ul>
  </nav>,
  "",
  .emotion-133 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-16 {
  width: 470px;
}

.emotion-1 {
  font-style: italic;
  color: #b3b3b3;
}

.emotion-0 {
  color: #c92300;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-4 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  color: #c92300;
}

.emotion-6 {
  position: relative;
}

.emotion-5 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-5:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-5:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-22 {
  min-width: 470px;
  max-width: 50%;
}

.emotion-20 {
  padding-top: 8px;
}

.emotion-17 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-19 {
  position: relative;
}

.emotion-18 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-18:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-54 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-23 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-25 {
  clear: both;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-26 {
  clear: both;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 16px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-27 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-29 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-28 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-31 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-34 {
  padding-left: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 16px;
}

.emotion-32 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-33 {
  color: #b3b3b3;
  padding-left: 12px;
}

.emotion-56 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-63 {
  padding-top: 16px;
}

.emotion-62 {
  background-color: #3b3b3b;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-58 {
  border-bottom: 1px solid #4a4a4a;
  padding: 16px;
}

.emotion-57 {
  font-size: 17px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-61 {
  padding: 32px;
  padding-top: 16px;
}

.emotion-59 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-60 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-60 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-60 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-66 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-94 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-67 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-68 {
  clear: both;
}

.emotion-93 {
  width: 100%;
  color: #ffffff;
  text-align: left;
}

.emotion-93 th,
.emotion-93 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-93 th:first-of-type,
.emotion-93 td:first-of-type {
  padding-left: 16px;
}

.emotion-93 th:nth-of-type(2),
.emotion-93 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-93 th:nth-of-type(3),
.emotion-93 td:nth-of-type(3) {
  width: 100%;
}

.emotion-93 th {
  color: #b3b3b3;
  font-weight: 500;
}

.emotion-93 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-93 td:first-of-type {
  border: none;
}

.emotion-93 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-93 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-93 tr:hover + tr td {
  border-top-color: transparent;
}

.emotion-93 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-93 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-74 {
  cursor: not-allowed;
}

.emotion-73 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-69 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #2e2e2e;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-71 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-80 {
  cursor: pointer;
}

.emotion-132 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-132 button,
.emotion-132 a {
  margin-right: 16px;
}

.emotion-130 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-130:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-130[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-130,
.emotion-130:hover,
.emotion-130:visited {
  background-color: #808080;
}

.emotion-130:hover {
  background-color: #b3b3b3;
}

.emotion-130[aria-disabled=true] {
  background-color: #808080;
}

.emotion-131 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-131:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-131[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-131,
.emotion-131:hover,
.emotion-131:visited {
  background-color: #73b61c;
}

.emotion-131:hover {
  background-color: #96c955;
}

.emotion-131[aria-disabled=true] {
  background-color: #808080;
}

<form
    action=""
    className="emotion-133"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-16"
    >
      <span
        className="emotion-1"
      >
        <span
          className="emotion-0"
        >
          *
        </span>
         required field
      </span>
      <h3
        className="emotion-2"
      >
        Data Source Name 
      </h3>
      <div
        className="emotion-7"
      >
        <label
          className="emotion-4"
          htmlFor="name"
        >
          Name
          <span
            className="emotion-3"
          >
             *
          </span>
        </label>
        <div
          className="emotion-6"
        >
          <input
            autoFocus={true}
            className="emotion-5"
            id="name"
            name="name"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-7"
        >
           
        </div>
      </div>
      <h3
        className="emotion-2"
      >
        Connect to Source: Google Cloud Storage
      </h3>
      <div
        className="emotion-7"
      >
        <label
          className="emotion-4"
          htmlFor="uri"
        >
          Bucket Address
          <span
            className="emotion-3"
          >
             *
          </span>
        </label>
        <div
          className="emotion-6"
        >
          <input
            className="emotion-5"
            id="uri"
            name="uri"
            onChange={[Function]}
            type="text"
            value="gs://"
          />
        </div>
        <div
          className="emotion-7"
        >
           
        </div>
      </div>
    </div>
    <div
      className="emotion-22"
    >
      <div
        className="emotion-20"
      >
        <label
          className="emotion-17"
          htmlFor="credential"
        >
          If this bucket is private, please paste the JSON service account credential:
        </label>
        <div
          className="emotion-19"
        >
          <textarea
            className="emotion-18"
            id="credential"
            name="credential"
            onChange={[Function]}
            rows="5"
            value=""
          />
        </div>
        <div
          className="emotion-20"
        >
           
        </div>
      </div>
    </div>
    <fieldset
      className="emotion-54"
    >
      <legend
        className="emotion-23"
      >
        Select File Types to Import
      </legend>
      <div
        className="emotion-25"
      >
        <div>
          A minimum of one file type must be selected
           
          <span
            className="emotion-0"
          >
            *
          </span>
        </div>
      </div>
      <div
        className="emotion-26"
      />
      <label
        className="emotion-35"
      >
        <div
          className="emotion-30"
        >
          <input
            className="emotion-27"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="images"
          />
          <div
            className="emotion-29"
          >
            <svg
              className="emotion-28"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-31"
        >
          <img
            alt="Image Files"
            src="/icons/images.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-34"
        >
          <span
            className="emotion-32"
          >
            Image Files
          </span>
          <span
            className="emotion-33"
          >
            GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
          </span>
        </div>
      </label>
      <label
        className="emotion-35"
      >
        <div
          className="emotion-30"
        >
          <input
            className="emotion-27"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="documents"
          />
          <div
            className="emotion-29"
          >
            <svg
              className="emotion-28"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-31"
        >
          <img
            alt="Documents (PDF & MS Office)"
            src="/icons/documents.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-34"
        >
          <span
            className="emotion-32"
          >
            Documents (PDF & MS Office)
          </span>
          <span
            className="emotion-33"
          >
            PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
          </span>
        </div>
      </label>
      <label
        className="emotion-35"
      >
        <div
          className="emotion-30"
        >
          <input
            className="emotion-27"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="video"
          />
          <div
            className="emotion-29"
          >
            <svg
              className="emotion-28"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-31"
        >
          <img
            alt="Video Files"
            src="/icons/videos.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-34"
        >
          <span
            className="emotion-32"
          >
            Video Files
          </span>
          <span
            className="emotion-33"
          >
            MP4, M4V, MOV, MPG, MPEG, OGG
          </span>
        </div>
      </label>
    </fieldset>
    <h3
      className="emotion-2"
    >
      Select Analysis
    </h3>
    <p
      className="emotion-56"
    >
      Choose the type of analysis you would like performed on your data set:
    </p>
    <div
      className="emotion-63"
    >
      <div
        className="emotion-62"
      >
        <div
          className="emotion-58"
        >
          <h4
            className="emotion-57"
          >
            Zorroa Automatic Analysis
          </h4>
        </div>
        <div
          className="emotion-61"
        >
          <p
            className="emotion-59"
          >
            The following basic analysis is applied to all data sets.
          </p>
          <ul
            className="emotion-60"
          >
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  File Introspection
                </span>
                <br />
                Extracts native metadata from file.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Similarity Hash
                </span>
                <br />
                Adds a hash to all images used to quantify the similarity between images.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Proxy Creation
                </span>
                <br />
                Creates proxy files suitable for web streaming for all media.
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="emotion-63"
    >
      <div
        className="emotion-62"
      >
        <div
          className="emotion-58"
        >
          <h4
            className="emotion-57"
          >
            <img
              alt="zorroa"
              height={32}
              src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
            />
          </h4>
        </div>
        <div
          className="emotion-61"
        >
          <p
            className="emotion-66"
          >
            These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
          </p>
          <fieldset
            className="emotion-94"
          >
            <legend
              className="emotion-67"
            >
              Visual Intelligence
            </legend>
            <div
              className="emotion-68"
            />
            <table
              cellSpacing="0"
              className="emotion-93"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-74"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-69"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-label-detection"
                        />
                        <div
                          className="emotion-71"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-label-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-label-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-80"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-27"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-object-detection"
                        />
                        <div
                          className="emotion-29"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-object-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-object-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-80"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-27"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-label-detection"
                        />
                        <div
                          className="emotion-29"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-label-detection
                        : 
                        Generate keyword labels for image, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-label-detection
                  </td>
                  <td>
                    Generate keyword labels for image, video, and documents.
                  </td>
                </tr>
                <tr
                  className="emotion-80"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-27"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-object-detection"
                        />
                        <div
                          className="emotion-29"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-object-detection
                        : 
                        Detect everyday objects in images, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-object-detection
                  </td>
                  <td>
                    Detect everyday objects in images, video, and documents.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-94"
          >
            <legend
              className="emotion-67"
            >
              Zorroa Timeline Extraction
            </legend>
            <div
              className="emotion-68"
            />
            <table
              cellSpacing="0"
              className="emotion-93"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-80"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-27"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-document-page-clips"
                        />
                        <div
                          className="emotion-29"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-document-page-clips
                        : 
                        Extract all pages in MS Office/PDF documents into separate assets.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-document-page-clips
                  </td>
                  <td>
                    Extract all pages in MS Office/PDF documents into separate assets.
                  </td>
                </tr>
                <tr
                  className="emotion-80"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-27"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-image-page-clips"
                        />
                        <div
                          className="emotion-29"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-image-page-clips
                        : 
                        Extract all layers in multi page image formats such as tiff and psd as as separate assets
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-image-page-clips
                  </td>
                  <td>
                    Extract all layers in multi page image formats such as tiff and psd as as separate assets
                  </td>
                </tr>
                <tr
                  className="emotion-80"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-27"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-video-shot-clips"
                        />
                        <div
                          className="emotion-29"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-video-shot-clips
                        : 
                        Break video files into individual assets based on a shot detection algorithm.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-video-shot-clips
                  </td>
                  <td>
                    Break video files into individual assets based on a shot detection algorithm.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-94"
          >
            <legend
              className="emotion-67"
            >
              Zorroa Visual Intelligence
            </legend>
            <div
              className="emotion-68"
            />
            <table
              cellSpacing="0"
              className="emotion-93"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-80"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-73"
                    >
                      <div
                        className="emotion-30"
                      >
                        <input
                          className="emotion-27"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-text-detection"
                        />
                        <div
                          className="emotion-29"
                        >
                          <svg
                            className="emotion-28"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-text-detection
                        : 
                        Utilize OCR technology to detect text on an image.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-text-detection
                  </td>
                  <td>
                    Utilize OCR technology to detect text on an image.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="emotion-132"
    >
      <a
        className="emotion-130"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cancel
      </a>
      <button
        aria-disabled={true}
        className="emotion-131"
        onClick={[Function]}
        type="submit"
      >
        Create Data Source
      </button>
    </div>
  </form>,
]
`;

exports[`<DataSourcesAdd /> should render properly 2`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add Data Source
        </a>
      </li>
    </ul>
  </nav>,
  "",
  .emotion-134 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-17 {
  width: 470px;
}

.emotion-1 {
  font-style: italic;
  color: #b3b3b3;
}

.emotion-0 {
  color: #c92300;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-4 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  color: #c92300;
}

.emotion-6 {
  position: relative;
}

.emotion-5 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-5:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-5:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-23 {
  min-width: 470px;
  max-width: 50%;
}

.emotion-21 {
  padding-top: 8px;
}

.emotion-18 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-20 {
  position: relative;
}

.emotion-19 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-19:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-55 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-24 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-26 {
  clear: both;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-27 {
  clear: both;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 16px;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-28 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-30 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-29 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-32 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-35 {
  padding-left: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 16px;
}

.emotion-33 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-34 {
  color: #b3b3b3;
  padding-left: 12px;
}

.emotion-57 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-64 {
  padding-top: 16px;
}

.emotion-63 {
  background-color: #3b3b3b;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-59 {
  border-bottom: 1px solid #4a4a4a;
  padding: 16px;
}

.emotion-58 {
  font-size: 17px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-62 {
  padding: 32px;
  padding-top: 16px;
}

.emotion-60 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-61 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-61 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-61 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-67 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-95 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-68 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-69 {
  clear: both;
}

.emotion-94 {
  width: 100%;
  color: #ffffff;
  text-align: left;
}

.emotion-94 th,
.emotion-94 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-94 th:first-of-type,
.emotion-94 td:first-of-type {
  padding-left: 16px;
}

.emotion-94 th:nth-of-type(2),
.emotion-94 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-94 th:nth-of-type(3),
.emotion-94 td:nth-of-type(3) {
  width: 100%;
}

.emotion-94 th {
  color: #b3b3b3;
  font-weight: 500;
}

.emotion-94 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-94 td:first-of-type {
  border: none;
}

.emotion-94 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-94 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-94 tr:hover + tr td {
  border-top-color: transparent;
}

.emotion-94 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-94 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-75 {
  cursor: not-allowed;
}

.emotion-74 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-70 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #2e2e2e;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-72 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-81 {
  cursor: pointer;
}

.emotion-133 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-133 button,
.emotion-133 a {
  margin-right: 16px;
}

.emotion-131 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-131:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-131[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-131,
.emotion-131:hover,
.emotion-131:visited {
  background-color: #808080;
}

.emotion-131:hover {
  background-color: #b3b3b3;
}

.emotion-131[aria-disabled=true] {
  background-color: #808080;
}

.emotion-132 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-132:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-132[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-132,
.emotion-132:hover,
.emotion-132:visited {
  background-color: #73b61c;
}

.emotion-132:hover {
  background-color: #96c955;
}

.emotion-132[aria-disabled=true] {
  background-color: #808080;
}

.emotion-12 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 2px solid #c92300;
  border-width: 2px;
}

.emotion-12:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-12:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-14 {
  color: #c92300;
  font-style: italic;
}

<form
    action=""
    className="emotion-134"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-17"
    >
      <span
        className="emotion-1"
      >
        <span
          className="emotion-0"
        >
          *
        </span>
         required field
      </span>
      <h3
        className="emotion-2"
      >
        Data Source Name 
      </h3>
      <div
        className="emotion-7"
      >
        <label
          className="emotion-4"
          htmlFor="name"
        >
          Name
          <span
            className="emotion-3"
          >
             *
          </span>
        </label>
        <div
          className="emotion-6"
        >
          <input
            autoFocus={true}
            className="emotion-5"
            id="name"
            name="name"
            onChange={[Function]}
            type="text"
            value="My Data Source"
          />
        </div>
        <div
          className="emotion-7"
        >
           
        </div>
      </div>
      <h3
        className="emotion-2"
      >
        Connect to Source: Google Cloud Storage
      </h3>
      <div
        className="emotion-7"
      >
        <label
          className="emotion-4"
          htmlFor="uri"
        >
          Bucket Address
          <span
            className="emotion-3"
          >
             *
          </span>
        </label>
        <div
          className="emotion-6"
        >
          <input
            className="emotion-12"
            id="uri"
            name="uri"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-7"
        >
          <span
            className="emotion-14"
          >
            Bucket address should start with gs://
          </span>
           
        </div>
      </div>
    </div>
    <div
      className="emotion-23"
    >
      <div
        className="emotion-21"
      >
        <label
          className="emotion-18"
          htmlFor="credential"
        >
          If this bucket is private, please paste the JSON service account credential:
        </label>
        <div
          className="emotion-20"
        >
          <textarea
            className="emotion-19"
            id="credential"
            name="credential"
            onChange={[Function]}
            rows="5"
            value=""
          />
        </div>
        <div
          className="emotion-21"
        >
           
        </div>
      </div>
    </div>
    <fieldset
      className="emotion-55"
    >
      <legend
        className="emotion-24"
      >
        Select File Types to Import
      </legend>
      <div
        className="emotion-26"
      >
        <div>
          A minimum of one file type must be selected
           
          <span
            className="emotion-0"
          >
            *
          </span>
        </div>
      </div>
      <div
        className="emotion-27"
      />
      <label
        className="emotion-36"
      >
        <div
          className="emotion-31"
        >
          <input
            className="emotion-28"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="images"
          />
          <div
            className="emotion-30"
          >
            <svg
              className="emotion-29"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-32"
        >
          <img
            alt="Image Files"
            src="/icons/images.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-35"
        >
          <span
            className="emotion-33"
          >
            Image Files
          </span>
          <span
            className="emotion-34"
          >
            GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
          </span>
        </div>
      </label>
      <label
        className="emotion-36"
      >
        <div
          className="emotion-31"
        >
          <input
            className="emotion-28"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="documents"
          />
          <div
            className="emotion-30"
          >
            <svg
              className="emotion-29"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-32"
        >
          <img
            alt="Documents (PDF & MS Office)"
            src="/icons/documents.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-35"
        >
          <span
            className="emotion-33"
          >
            Documents (PDF & MS Office)
          </span>
          <span
            className="emotion-34"
          >
            PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
          </span>
        </div>
      </label>
      <label
        className="emotion-36"
      >
        <div
          className="emotion-31"
        >
          <input
            className="emotion-28"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="video"
          />
          <div
            className="emotion-30"
          >
            <svg
              className="emotion-29"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-32"
        >
          <img
            alt="Video Files"
            src="/icons/videos.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-35"
        >
          <span
            className="emotion-33"
          >
            Video Files
          </span>
          <span
            className="emotion-34"
          >
            MP4, M4V, MOV, MPG, MPEG, OGG
          </span>
        </div>
      </label>
    </fieldset>
    <h3
      className="emotion-2"
    >
      Select Analysis
    </h3>
    <p
      className="emotion-57"
    >
      Choose the type of analysis you would like performed on your data set:
    </p>
    <div
      className="emotion-64"
    >
      <div
        className="emotion-63"
      >
        <div
          className="emotion-59"
        >
          <h4
            className="emotion-58"
          >
            Zorroa Automatic Analysis
          </h4>
        </div>
        <div
          className="emotion-62"
        >
          <p
            className="emotion-60"
          >
            The following basic analysis is applied to all data sets.
          </p>
          <ul
            className="emotion-61"
          >
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  File Introspection
                </span>
                <br />
                Extracts native metadata from file.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Similarity Hash
                </span>
                <br />
                Adds a hash to all images used to quantify the similarity between images.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Proxy Creation
                </span>
                <br />
                Creates proxy files suitable for web streaming for all media.
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="emotion-64"
    >
      <div
        className="emotion-63"
      >
        <div
          className="emotion-59"
        >
          <h4
            className="emotion-58"
          >
            <img
              alt="zorroa"
              height={32}
              src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
            />
          </h4>
        </div>
        <div
          className="emotion-62"
        >
          <p
            className="emotion-67"
          >
            These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
          </p>
          <fieldset
            className="emotion-95"
          >
            <legend
              className="emotion-68"
            >
              Visual Intelligence
            </legend>
            <div
              className="emotion-69"
            />
            <table
              cellSpacing="0"
              className="emotion-94"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-75"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-70"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-label-detection"
                        />
                        <div
                          className="emotion-72"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-label-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-label-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-81"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-28"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-object-detection"
                        />
                        <div
                          className="emotion-30"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-object-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-object-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-81"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-28"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-label-detection"
                        />
                        <div
                          className="emotion-30"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-label-detection
                        : 
                        Generate keyword labels for image, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-label-detection
                  </td>
                  <td>
                    Generate keyword labels for image, video, and documents.
                  </td>
                </tr>
                <tr
                  className="emotion-81"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-28"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-object-detection"
                        />
                        <div
                          className="emotion-30"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-object-detection
                        : 
                        Detect everyday objects in images, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-object-detection
                  </td>
                  <td>
                    Detect everyday objects in images, video, and documents.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-95"
          >
            <legend
              className="emotion-68"
            >
              Zorroa Timeline Extraction
            </legend>
            <div
              className="emotion-69"
            />
            <table
              cellSpacing="0"
              className="emotion-94"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-81"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-28"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-document-page-clips"
                        />
                        <div
                          className="emotion-30"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-document-page-clips
                        : 
                        Extract all pages in MS Office/PDF documents into separate assets.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-document-page-clips
                  </td>
                  <td>
                    Extract all pages in MS Office/PDF documents into separate assets.
                  </td>
                </tr>
                <tr
                  className="emotion-81"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-28"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-image-page-clips"
                        />
                        <div
                          className="emotion-30"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-image-page-clips
                        : 
                        Extract all layers in multi page image formats such as tiff and psd as as separate assets
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-image-page-clips
                  </td>
                  <td>
                    Extract all layers in multi page image formats such as tiff and psd as as separate assets
                  </td>
                </tr>
                <tr
                  className="emotion-81"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-28"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-video-shot-clips"
                        />
                        <div
                          className="emotion-30"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-video-shot-clips
                        : 
                        Break video files into individual assets based on a shot detection algorithm.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-video-shot-clips
                  </td>
                  <td>
                    Break video files into individual assets based on a shot detection algorithm.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-95"
          >
            <legend
              className="emotion-68"
            >
              Zorroa Visual Intelligence
            </legend>
            <div
              className="emotion-69"
            />
            <table
              cellSpacing="0"
              className="emotion-94"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-81"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-74"
                    >
                      <div
                        className="emotion-31"
                      >
                        <input
                          className="emotion-28"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-text-detection"
                        />
                        <div
                          className="emotion-30"
                        >
                          <svg
                            className="emotion-29"
                            data-file-name="checkmark.svg"
                            width={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-text-detection
                        : 
                        Utilize OCR technology to detect text on an image.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-text-detection
                  </td>
                  <td>
                    Utilize OCR technology to detect text on an image.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      className="emotion-133"
    >
      <a
        className="emotion-131"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cancel
      </a>
      <button
        aria-disabled={true}
        className="emotion-132"
        onClick={[Function]}
        type="submit"
      >
        Create Data Source
      </button>
    </div>
  </form>,
]
`;
